--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,10 @@
 			<artifactId>scala-library</artifactId>
 			<version>2.11.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc-portlet</artifactId>
+		</dependency>
 	</dependencies>
 	
 	<build>
